--- a/styles/form.css
+++ b/styles/form.css
@@ -69,7 +69,7 @@ textarea {
 }
 
 select:invalid {
-  color: #888;
+  color: #000000;
 }
 
 textarea {
@@ -111,6 +111,7 @@ textarea {
   gap: 20px;
   margin-top: 15px;
   margin-bottom: 15px;
+  font-weight: 600;
 }
 
 .checkbox-group label {
